tests/cases/should_fail/literals/invalid_unicode_char.stderr
error: invalid character escape sequence. Unicode escape literal must be at most 6 hex digits
 --> $DIR/invalid_unicode_char.hash:3:8
2 |   
3 |   k := '\u{00000000000}'; // This is an invalid unicode char as it too big.
  |          ^^^^^^^^^^^^^^ here
